<resources>
    <string name="app_name">Cogitare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_avaliacaoABC">Avaliação ABC</string>
    <string name="menu_viasRespiratorias">Vias repiratórias</string>
    <string name="menu_viasAereas">Vias aéreas</string>
    <string name="menu_viasCirculatórias">Vias circulatórias</string>

    <string name="menu_registroinfo">Registro de informações</string>

    <string name="menu_sinaisVitais">Sinais Vitais</string>
    <string name="menu_avaliacaoInicial">Avaliação Inicial</string>

    <string name="menu_exameFisico">Exame físico dos sistemas</string>
    <string name="menu_exameFisicoNeuro">Neurológico</string>
    <string name="menu_exameFisicoResp">Respiratório</string>
    <string name="menu_exameFisicoCardioVascular">Cardiovascular</string>
    <string name="menu_exameFisicoUrinario">Urinário</string>
    <string name="menu_exameFisicoSitoCirurgico">Sítio Cirúrgico</string>

    <string name="menu_indiceAK">Índice de Aldrete e Kroulik</string>

    <string name="menu_infoTransoperatorias">Informações transoperatórias</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="titulo_transoperatorio">Informações transoperatórias</string>
</resources>
