<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="all" >
        <item
            android:id="@+id/nav_registroPaciente"
            android:icon="@drawable/ic_padrao"
            android:title="@string/menu_home"
            />

            <item android:id="@+id/nav_avaliacaoABC" android:title="@string/menu_avaliacaoABC" >
                <menu>
                    <group android:checkableBehavior="all">
                        <item
                            android:id="@+id/nav_viasAereas"
                            android:icon="@drawable/ic_padrao"
                            android:title="@string/menu_viasAereas" />
                        <item
                            android:id="@+id/nav_AvaliacaoResp"
                            android:icon="@drawable/ic_padrao"
                            android:title="@string/menu_viasRespiratorias" />

                        <item
                            android:id="@+id/nav_viasCirculatorias"
                            android:icon="@drawable/ic_padrao"
                            android:title="@string/menu_viasCirculatórias" />
                    </group>
                </menu>
            </item>

        <item android:id="@+id/nav_regTransOp" android:title="@string/menu_registroinfo">
            <menu>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/nav_registoInfoTransOperatorias"
                        android:icon="@drawable/ic_padrao"
                        android:title="@string/menu_registroinfo"/>
                </group>
            </menu>
        </item>

        <item android:id="@+id/nav_paciente" android:title="@string/menu_avaliacaoInicial">
            <menu>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/nav_SinaisVitais"
                        android:icon="@drawable/ic_padrao"
                        android:title="@string/menu_sinaisVitais"/>
                </group>
            </menu>
        </item>

        <item android:id="@+id/nav_avaliacaoInicial" android:title="@string/menu_exameFisico">
            <menu>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/nav_exameNeuro"
                        android:icon="@drawable/ic_padrao"
                        android:title="@string/menu_exameFisicoNeuro" />

                    <item
                        android:id="@+id/nav_exameResp"
                        android:icon="@drawable/ic_padrao"
                        android:title="@string/menu_exameFisicoResp" />

                    <item
                        android:id="@+id/nav_exameCardio"
                        android:icon="@drawable/ic_padrao"
                        android:title="@string/menu_exameFisicoCardioVascular" />

                    <item
                        android:id="@+id/nav_exameUrinario"
                        android:icon="@drawable/ic_padrao"
                        android:title="@string/menu_exameFisicoUrinario" />

                    <item
                        android:id="@+id/nav_sitioCirurgico"
                        android:icon="@drawable/ic_padrao"
                        android:title="@string/menu_exameFisicoSitoCirurgico" />

                </group>
            </menu>
        </item>

        <item android:id="@+id/nav_descrindiceAK" android:title="@string/menu_indiceAK">
            <menu>
                <group android:checkableBehavior="all">
                    <item
                        android:id="@+id/nav_indiceAK"
                        android:icon="@drawable/ic_padrao"
                        android:title="@string/menu_indiceAK" />
                </group>
            </menu>
        </item>

    </group>

</menu>
